Basic polling for services and instances

--- a/cabot/templates/base.html
+++ b/cabot/templates/base.html
@@ -144,6 +144,10 @@
     <script src="{{ STATIC_URL }}theme/js/custom.js"></script>
     <script src="{{ STATIC_URL }}arachnys/js/raphael.js"></script>
     <script src="{{ STATIC_URL }}arachnys/js/morris.js"></script>
+
+    <!--Enables active polling for services and instances-->
+    <script type="text/javascript" src="{{ STATIC_URL }}cabot/js/ahah.js"></script>
+
     <!-- end: JavaScript-->
     <script type="text/coffeescript">
     $ () ->
