Can't poll service list due to datatable issue.

--- a/cabot/templates/cabotapp/instance_list.html
+++ b/cabot/templates/cabotapp/instance_list.html
@@ -23,7 +23,7 @@
 {% compress js %}
 <script type="text/javascript">
   if (refreshActiveComponent) {
-    refreshActiveComponent('cabotapp/_instance_list.html', '_instance_list_container', '_instance_list')
+    refreshActiveComponent(location.pathname, '_instance_list_container', '_instance_list')
   }
 </script>
 {% endcompress %}
